syntax = "proto3";

package data_dispatcher_service;

option go_package = "github.com/mlops-eval/data-dispatcher-service/src/pb";

// Data Dispatcher service definition
service DataDispatcherService {
  // Notify the service about a new authenticated client that needs data streaming
  rpc NotifyNewClient(NewClientRequest) returns (NewClientResponse);
  
  // Health check endpoint
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Request message when a new client is authenticated and ready to receive data
message NewClientRequest {
  string client_id = 1;    // Unique identifier of the client
  string queue_name = 2;   // Name of the RabbitMQ queue where data should be published
  string amqp_host = 3;    // RabbitMQ hostname or IP
  int32 amqp_port = 4;     // RabbitMQ port (default: 5672)
  string amqp_user = 5;    // RabbitMQ username
  string amqp_pass = 6;    // RabbitMQ password
}

// Response message acknowledging the new client notification
message NewClientResponse {
  string status = 1;       // Status of the operation (e.g., "OK", "ERROR")
  string message = 2;      // Optional message or error description
}

// Health check request
message HealthCheckRequest {}

// Health check response
message HealthCheckResponse {
  string status = 1;  // "SERVING", "NOT_SERVING", "SERVICE_UNKNOWN"
  string message = 2;
} 